Updated LoanRepository before merge